# MultiClinicaBot

./: README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  seed.py
alembic/: env.py
alembic/versions/: ee03c1329669_initial_migration.py
app/: config.py  main.py
app/api/v1/: bot.py
app/config/: database.py
app/models/: conversation.py  entities.py  feedback.py  mongo_schemas.py
app/repositories/: base.py  mongo_repository.py  redis_session.py  repositories.py
app/routers/: conversacionesLogs.py  router.py
app/schemas/: responses.py
app/service/: WsHcweb.py  bot_service.py  logging_service.py
tests/: test_models.py
