[project]
name = "multiclinica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "motor>=3.7.1",
    "redis>=6.3.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
